# sim-starter

./: LICENSE  README.md  behave.ini  pyproject.toml
config/: config_manager.py  factory_sim_config.yaml  logger_config.yaml  sim_config.yaml
output/: results_manager.py
simulations/: base_simulation.py  factory_simulation.py  multi_run.py  single_run.py
tests/bdd_tests/features/: test_simulation.feature
tests/bdd_tests/steps/: steps_simulation.py
tests/e2e_tests/: test_e2e_simulation.py
tests/unit_tests/: test_simulation.py
world/: agents.py  world_builder.py
